adding logic for geo and genres services, deleting data about directors and casts from the service
